[tool.poetry]
name = "cancer-prediction-sch64"
version = "0.1.0"
description = ""
authors = ["Sebastiaan Hoek <121035048+Sebas-000@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cancer_prediction"}]

[tool.poetry.scripts]
cancer-prediction =  "cancer_prediction.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.1"
scikit-learn = "1.4.1.post1"
matplotlib = "3.8.3"
numpy = "1.26.4"
typer = "0.9.0"
streamlit = "1.31.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
